# py-self-md5

./: .gitignore  README.md  pyproject.toml
py_self_md5/: __init__.py  cli.py
